# suno-radio-bot

./: .gitignore  README.md  dev.py  pyproject.toml  requirements.txt  run.py  setup_venv.sh  suno-song.html  suno_radio.db  suno_radio1.db  suno_radio2.db
docs/: features.md  files.md  note_from_grok.md  plan.md  tdd_testing.md  testing.md  todo.md  tts_audio_implementation_log.md
src/: bot.py  test_scraper.py  twss.csv
src/cogs/: music.py  stats.py
src/data/: db.py  persistence.py
src/migrations/: 001_init.sql
src/ui/: queue_manager.py
src/utils/: extractor.py  opus_loader.py  prefetch.py  scraper.py  shuffle_displacing_first.py  song_scraper.py  test_speak.py  yt_extractor.py
